--- a/src/custom/pruebatecnicasteven/clasificacion_fiscal/views/account_move_views.xml
+++ b/src/custom/pruebatecnicasteven/clasificacion_fiscal/views/account_move_views.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <data>
         <record id="view_move_form_inherit_clasificacion_fiscal" model="ir.ui.view">
             <name>account.move.form.inherit.clasificacion.fiscal</name>
             <model>account.move</model>
             <inherit_id ref="account.view_move_form"/>
-            <arch type="xml">
+            <field name="arch" type="xml">
                 <xpath expr="//field[@name='payment_reference']" position="after">
                     <field name="clasificacion_fiscal"/>
                 </xpath>
-            </arch>
+            </field>
         </record>
 
         <record id="view_account_invoice_filter_inherit_clasificacion_fiscal" model="ir.ui.view">
             <name>account.invoice.filter.inherit.clasificacion.fiscal</name>
             <model>account.move</model>
             <inherit_id ref="account.view_account_invoice_filter"/>
-            <arch type="xml">
+            <field name="arch" type="xml">
                 <xpath expr="//field[@name='partner_id']" position="after">
                     <field name="clasificacion_fiscal" string="Clasificación Fiscal" filter_domain="[('clasificacion_fiscal','ilike',self)]"/>
                 </xpath>
@@ -27,6 +28,7 @@
                  <xpath expr="//group" position="inside">
                     <filter name="group_by_clasificacion_fiscal" string="Clasificación Fiscal" context="{'group_by': 'clasificacion_fiscal'}"/>
                 </xpath>
-            </arch>
+            </field>
         </record>
+    </data>
 </odoo>
